[package]
name = "kalkan-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.8"
# Async Runtime: Yüksek eşzamanlılık için motorumuz
tokio = { version = "1.36", features = ["full"] }

reqwest = { version = "0.12", features = ["json", "stream"] }

# HTTP/Network: Hyper performansı ve Tower middleware yetenekleri
hyper = { version = "1.2", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"

# Serialization: Hızlı JSON işlemesi
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Redis: Bütçe (Quota) ve Durum Yönetimi (Lua Scripting destekli)
redis = { version = "0.25", features = ["connection-manager", "tokio-comp"] }

# Streaming: Sliding Window ve on-the-fly analiz için
async-stream = "0.3"
futures-util = "0.3"

# Hata Yönetimi: Güvenlik odaklı hata tanımlamaları
thiserror = "1.0"
anyhow = "1.0"

# OPA & Security: Zero-trust politikaları için gRPC iletişimi
tonic = "0.11"
prost = "0.12"

# Telemetri ve Gözlemlenebilirlik: Kaptan Köşküne veri akışı
tracing = "0.1"
tracing-subscriber = "0.3"
hyper-util = { version = "0.1.20", features = ["tokio"] }
bytes = "1.12.0"

[build-dependencies]
# Protobuf (.proto) dosyalarını Rust koduna derlemek için
tonic-build = "0.11" 

# Mimarın "Sharp Debugger" Notu: Minimalist Binary Boyutu İçin
[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
